// Vitest Snapshot v1

exports[`CdrContainer > using the default slot > renders correctly 1`] = `
<div
  class="cdr-container cdr-container--static"
>
  <!-- @slot CdrContainer content  -->
  
  foo
  
</div>
`;

exports[`CdrContainer > using the default slot > with "fluid" modifier > renders correctly 1`] = `
<div
  class="cdr-container cdr-container--fluid"
>
  <!-- @slot CdrContainer content  -->
  
  foo
  
</div>
`;
